address overlap issue

--- a/public/schedule.css
+++ b/public/schedule.css
@@ -87,6 +87,12 @@ body {
   border: 1px solid rgba(255, 255, 255, 0.5);
 }
 
+@media (max-width: 1600px) {
+  .DaySchedule__title__author {
+    flex-direction: column;
+  }
+}
+
 @media (max-width: 1200px) {
 
   .DaySchedule__title__author {
